test/error/E41.chimod
{
	"dependencies": ["lang"],
	"types": {},
	"has_c_support": false
}
